# bsp-registry-tools

./: .gitignore  README.md  bsp.py  pyproject.toml
.github/workflows/: cli-tests.yml  publish.yml  tests.yml
bsp/: __init__.py  bsp_manager.py  cli.py  cli_runner.py  deployer.py  environment.py  exceptions.py  gatherer.py  gui.py  kas_manager.py  lava_client.py  lava_job_builder.py  models.py  path_resolver.py  registry_fetcher.py  registry_writer.py  remotes_manager.py  resolver.py  utils.py
bsp/server/: __init__.py  app.py  graphql_schema.py  rest.py  types.py
bsp/storage/: __init__.py  aws.py  azure.py  base.py  factory.py
docs/: artifact-deployment.md  migration-v1-to-v2.md  nxp-secure-boot.md  registry-editing.md  registry-v1.md  registry-v2.md  server.md
examples/: Dockerfile  Dockerfile.ubuntu  bsp-registry.advantech.yaml  bsp-registry.devices.yaml  bsp-registry.yaml  bsp-registry.yml  checkout-output.txt
examples/kas/: scarthgap.yml  styhead.yml
examples/kas/devices/qemu/: qemuamd64.yaml  qemuarm.yaml
examples/kas/isar/: Dockerfile.isar.debian  bsp-registry.isar.yaml  isar-v0.11.yaml  isar-v1.0.yaml  isar.yaml
examples/kas/isar/distro/: debian-bookworm.yaml  debian-bullseye.yaml  debian-buster.yaml  debian-sid.yaml  debian-trixie.yaml  raspios-bookworm.yaml  raspios-bullseye.yaml  ubuntu-focal.yaml  ubuntu-jammy.yaml  ubuntu-noble.yaml
examples/kas/isar/features/: ssh.yaml  users.yaml  wic.yaml
examples/kas/isar/qemu/: common.yaml  qemux86.yaml
examples/kas/isar/scripts/: isar-runqemu.sh
examples/kas/poky/: styhead.yaml
examples/kas/poky/distro/: poky.yaml
examples/kas/poky/qemu/: qemuarm.yaml  qemuarm64.yaml
examples/kas/qemu/: qemuarm.yml  qemuarm64.yml  qemux86-64.yml
examples/kas/vendors/qemu/: qemu-common.yaml
examples/kas/yocto/: Dockerfile.poky.debian  bsp-registry.yocto.yaml  yocto-ext.yaml  yocto.yaml
examples/kas/yocto/devices/: qemuarm64.yaml
examples/kas/yocto/distro/: harden.yaml
examples/kas/yocto/features/: debug.yaml  security.yaml  ssh.yaml  systemd.yaml
examples/kas/yocto/releases/: scarthgap.yaml  styhead.yaml  walnascar.yaml  whinlatter.yaml
examples/lava/: job-template.yaml.j2
tests/: conftest.py  test_bsp.py  test_bsp_manager.py  test_cli.py  test_cli_basic.py  test_cli_remote_flags.py  test_deploy.py  test_environment.py  test_exceptions.py  test_gatherer.py  test_gui.py  test_kas_manager.py  test_lava_client.py  test_lava_job_builder.py  test_models.py  test_path_resolver.py  test_registry_fetcher.py  test_registry_writer.py  test_remotes_manager.py  test_utils.py
